package de.hhu.chicken.domain.student;

record GithubHandle(String handle) {

}
