package de.hhu.chicken.domain.student;

record GithubId(Long id) {
}
